--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <title>Sci-Whiz</title>
+</head>
+
+<body>
+
+  <input type="checkbox" id="contact_box"> Contact</label>
+  <input type="checkbox" id="drawing_box"> Drawing</label>
+  <nav id="navbar">
+    <div>
+      <a href="">Home</a>
+      <a href="">Account</a>
+    </div>
+  </nav>
+
+  <script>
+    const navbar = document.getElementById('navbar');
+
+    function updateNav(itemId, text, href, checked) {
+      const existing = document.getElementById(itemId);
+
+      if (checked) {
+        if (!existing) {
+          // const li = document.createElement('li');
+          // li.id = itemId;
+          const a = document.createElement('a');
+          a.id = itemId;
+          a.href = href;
+          a.textContent = text;
+          // li.appendChild(a);
+          navbar.appendChild(a);
+        }
+      } else {
+        if (existing) {
+          existing.remove();
+        }
+      }
+    }
+
+    // Handle checkbox changes
+    document.getElementById('contact_box').addEventListener('change', function () {
+      updateNav('contactNavItem', 'Contact', 'contact.html', this.checked);
+    });
+
+    document.getElementById('drawing_box').addEventListener('change', function () {
+      updateNav('drawingNavItem', 'Drawing', 'drawing.html', this.checked);
+    });
+
+  </script>
+
+
+</body>
+
 </html>
