new updation in home page

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 
 <body>
 
-  <input type="checkbox" id="contact_box"> Contact</label>
-  <input type="checkbox" id="drawing_box"> Drawing</label>
+  <label for=""></label><input type="checkbox" id="contact_box"> Animal Facts</label>
+  <label for=""></label><input type="checkbox" id="drawing_box"> Dinos</label>
   <nav id="navbar">
     <div>
       <a href="">Home</a>
